<resources>
    <string name="action_settings">Settings</string>
    <string name="action_stop_sharing">STOP SHARING</string>
    <string name="share_your_location">SHARE LIVE LOCATION</string>
    <string name="action_retry">Retry</string>
    <string name="action_search">Search</string>
    <string name="action_tutor_activity">Tutors</string>
    <string name="start_tracking">Resume tracking</string>
    <string name="stop_tracking">Pause tracking</string>
    <string name="start_mock_tracking">Start Mock Tracking</string>
    <string name="stop_mock_tracking">Stop Mock tracking</string>
    <string name="prompt_email">Email...</string>
    <string name="prompt_password">Password...</string>
    <string name="app_name">Tongue</string>
    <string name="search_activity">Search Languages</string>
    <string name="home_instructions">What language would you like to learn?</string>
    <string name="search_hint">Search Languages</string>
    <string name="payment_summary_title">Payment summary</string>
    <string name="prompt_signup">Create an account</string>
    <string name="loading">Loading ...</string>
    <string name="description">Tongue is a mobile
        application that ......... For more details contact us on:</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="prompt_name">Name</string>
    <string name="select_level">Select Level</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="log_in_label">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="confirm_hint">Confirm Password</string>
    <string name="action_skip">Skip</string>
    <string name="copyright">Copyright @ 2018. Tongue.</string>
    <string name="title_activity_signup_profile">Profile</string>
    <string name="filter_title_track">Tongue</string>
    <string name="about_contact_us">Contact us</string>
    <string name="about_instagram">Follow us on Instagram</string>
    <string name="about_facebook">Like us on Facebook</string>
    <string name="about_play_store">Rate us on the Play Store</string>
    <string name="about_youtube">Watch us on Youtube</string>
    <string name="about_twitter">Follow us on Twitter</string>
    <string name="about_github">Fork us on GitHub</string>
    <string name="about_website">Visit our website</string>
    <string name="about_tongue_text">Tongue is a mobile application intended to connect language teachers with those who
seek to learn a new language. The user is be able to view the profiles of those who know the language he / She seeks to learn and send
them a request.
        \n\n
        Tongue as a platform for learning languages intends to provide customized solutions to
the problem of language barrier, meeting the needs of those who intend to learn a new
language in depth and those who seek to learn only the basics like greeting, asking a
few questions as may be necessary for their project.
    </string>
    <string name="empty_view">No data received</string>
    <string name="exit">exit</string>
    <string name="number_picker_formatter">%02d</string>
    <string name="logout">logout</string>
    <string name="app_close_prompt">Close App?</string>
    <string name="prompt_forgot_password">Forgot password?</string>
    <string name="action_sign_in">Sign in</string>
    <string name="kampala">Kampala, Uganda</string>
    <string name="geofence_not_available">Geofence service is not available now. Network Location Provider is disabled</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call</string>
    <string name="unknown_geofence_error">Unknown error: the Geofence service is not available now</string>
    <string name="geofence_transition_invalid_type">Geofence transition error: invalid transition type %1$d</string>
    <string name="enter_phone_number_footer_note">We will use your phone number to send verification code for HyperTrack-Live</string>
    <string name="service_not_available">There was an error fetching address. Please try again</string>
    <string name="invalid_lat_lng_used">There was an error fetching address. Please try again</string>
    <string name="no_address_found">There was an error fetching address. Please try again</string>
    <string name="geofence_transition_entered">GEOFENCE_TRANSITION_ENTER</string>
    <string name="geofence_transition_exited">GEOFENCE_TRANSITION_EXIT</string>
    <string name="geofence_transition_dwelled">GEOFENCE_TRANSITION_DWELL</string>
    <string name="unknown_geofence_transition">GEOFENCE_TRANSITION_UNKNOWN</string>
    <string name="create_profile_message">Setting up your account</string>
    <string name="update_profile_message">Updating your profile</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="calculating_eta_message">Calculating ETA…</string>
    <string name="sharing_live_location_message">Sharing your location ...</string>
    <string name="fetching_details_msg">Fetching details…</string>
    <string name="stop_sharing_message">Completing your visit</string>
    <string name="profile_upload_success">Profile pic uploaded successfully</string>
    <string name="network_issue">Bad connection. Try again later</string>
    <string name="profile_update_failed">We had problem connecting with the server. Please try again in sometime</string>
    <string name="profile_pic_choose_failed">There was an error choosing profile image. Please try again</string>
    <string name="stop_sharing_failed">Error ending your trip. Please try again</string>
    <string name="eta_fetching_error">Sorry, we could not calculate an ETA. Please try again later</string>
    <string name="share_message_error">We had a problem sharing your trip. Please try again in some time.</string>
    <string name="navigate_to_expected_place_error">We had a problem starting navigation for your expected place. Please try again in some time.</string>
    <string name="location_off_info_message">Please turn on your location</string>
    <string name="internet_off_info_message">Unable to connect to internet</string>
    <string name="internet_location_both_off_info_message">Internet &amp; Location OFF</string>
    <string name="location_permission_rationale_msg">To let your friends and family track you live, allow HyperTrack Live to access this device’s location</string>
    <string name="location_permission_snackbar_msg">Need Location Permission</string>
    <string name="location_services_snackbar_msg">Need Location Services</string>
    <string name="location_permission_never_allow">To let your friends and family track you live, you need to allow HyperTrack Live to access this device’s location.
        \n\nGo to Settings, tap on Permissions, and turn on Location.</string>
    <string name="read_external_storage_permission_msg">To upload and change a profile photo, you need to allow HyperTrack Live to access photos on your device</string>
    <string name="read_external_storage_permission_never_allow">To upload and change a profile photo, you need to allow HyperTrack Live to access photos on your device.
        \n\nGo to Settings, tap on Permissions, and turn on Storage.</string>
    <string name="notification_share_tracking_link">Share your tracking link with your friends &amp; family.</string>
    <string name="notification_set_destination">Set your destination</string>
    <string name="location_permission_detail">We need your location permission to capture your location and activity through the day, and to let you share your live location with your friends when you are on the way</string>
    <string name="background_tracking_permission_msg">We will enable the background tracking by default. Do you want to enable it?</string>
    <string name="your_placeline">Placeline</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend Code</string>
    <string name="verification_description">Enter verification code to verify your contact number</string>
    <string name="stop">STOP</string>
    <string name="share">SHARE</string>
    <string name="review_placeline">Review Placeline</string>
    <string name="show_summary">Show Summary</string>
    <string name="share_eta">SHARE ETA</string>
    <string name="tracking_eta_fyi">eta.fyi</string>
    <string name="summary_title">How\'s your day?</string>
    <string name="select_cartegory"> Select Cartegory</string>
    <string name="action_sign_up">Register</string>
    <string name="Signup">Sign Up</string>
    <string-array name="gender">
        <item name="male">male</item>
        <item name="female">female</item>
    </string-array>
    <string name="roboto_regular">sans-serif</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_condensed">sans-serif-condensed</string>
    <string name="roboto_thin">sans-serif-thin</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Global</string>
    <string name="msg_subscribe_failed">Failed to subscribe to global topic</string>
    <string name="msg_subscribed">Subscribed to global topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_phone_number">e.g 256703667894</string>
    <string name="hint_about_user">Briefly write about you</string>
    <string name="hint_date">date of birth e.g 11/09/89</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="create_account">Create an account</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="confirmed_requests">Confirmed Requests</string>
    <string name="for_tutors">For Tutors</string>
    <string name="for_users">For Users</string>
    <string name="user_profile">Profile</string>
    <string name="user_logout">Logout</string>
    <string name="user_feedback">Feedback</string>
    <string name="user_share">Share</string>
    <string name="about_tongue">About Tongue</string>
    <string name="general_users">General</string>
    <string name="tel">Call +256-392-001934 </string>
    <string name="watsapp">WhatsApp 0703 839528</string>
    <string name="website">http://agro.billbrain.tech</string>
    <string name="facebook">https://web.facebook.com/billbraintech/</string>
    <string name="twitter">https://twitter.com/billbraintech/</string>
    <string name="email">info@billbraintechnologies.com</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="set_meeting_schedule">Set meeting schedule</string>
    <string name="btn_meeting_time">Set Time:</string>
    <string name="btn_meeting_date">Set Date:</string>
    <string name="tv_meeting_location">Location:</string>
    <string name="meeting_location_hint">Edit Location</string>
</resources>