<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--<group android:checkableBehavior="single">
    </group>-->

    <item android:title="@string/for_users">
        <menu>
        <item
            android:id="@+id/pending_requests"
            android:icon="@drawable/ic_pending_request"
            android:title="@string/pending_requests" />
        <item
            android:id="@+id/confirmed_requests"
            android:icon="@drawable/ic_confirmed_request"
            android:title="@string/confirmed_requests" />
        </menu>
    </item>

    <item android:title="@string/for_tutors">
        <menu>
            <item
                android:id="@+id/tutor_pending_requests"
                android:icon="@drawable/ic_pending_request"
                android:title="@string/pending_requests" />
            <item
                android:id="@+id/tutor_confirmed_requests"
                android:icon="@drawable/ic_confirmed_request"
                android:title="@string/confirmed_requests" />
        </menu>
    </item>

    <item android:title="@string/general_users">
        <menu>
            <item
                android:id="@+id/nav_user_profile"
                android:icon="@drawable/ic_account_circle_black"
                android:title="@string/user_profile" />

            <item
                android:id="@+id/nav_about_tongue"
                android:icon="@drawable/ic_info_black"
                android:title="@string/about_tongue" />

            <!--<item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/user_share" />-->

            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_black"
                android:title="@string/user_feedback" />

            <item
                android:id="@+id/nav_user_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/user_logout" />
        </menu>
    </item>

</menu>
